// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectClaimant with default value props renders correctly 1`] = `
<div>
  <div
    class="cf-different-claimant"
    style="margin-top: 18.95px;"
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Is the claimant someone other than the Veteran?
             
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_false"
            name="different-claimant-option"
            type="radio"
            value="false"
          />
          <label
            class=""
            for="different-claimant-option_false"
          >
            No
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_true"
            name="different-claimant-option"
            type="radio"
            value="true"
          />
          <label
            class=""
            for="different-claimant-option_true"
          >
            Yes
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SelectClaimant with formType 'appeal' deceasedAppellants toggled OFF renders correctly 1`] = `
<div>
  <div
    class="cf-different-claimant"
    style="margin-top: 18.95px;"
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Is the claimant someone other than the Veteran?
             
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            disabled=""
            id="different-claimant-option_false"
            name="different-claimant-option"
            type="radio"
            value="false"
          />
          <label
            class="disabled"
            for="different-claimant-option_false"
          >
            No
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_true"
            name="different-claimant-option"
            type="radio"
            value="true"
          />
          <label
            class=""
            for="different-claimant-option_true"
          >
            Yes
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SelectClaimant with formType 'appeal' deceasedAppellants toggled ON renders correctly 1`] = `
<div>
  <div
    class="cf-different-claimant"
    style="margin-top: 18.95px;"
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Is the claimant someone other than the Veteran?
             
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_false"
            name="different-claimant-option"
            type="radio"
            value="false"
          />
          <label
            class=""
            for="different-claimant-option_false"
          >
            No
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_true"
            name="different-claimant-option"
            type="radio"
            value="true"
          />
          <label
            class=""
            for="different-claimant-option_true"
          >
            Yes
          </label>
        </div>
      </div>
    </fieldset>
    <div
      class="usa-alert usa-alert-warning usa-alert-slim cf-margin-bottom-2rem"
      data-css-18gfs8j=""
      role="alert"
    >
      <div
        class="usa-alert-body"
      >
        <div
          class="usa-alert-text"
        >
          This Veteran may be deceased. Please confirm before sending a notice letter.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectClaimant with formType not 'appeal' deceasedAppellants toggled OFF renders correctly 1`] = `
<div>
  <div
    class="cf-different-claimant"
    style="margin-top: 18.95px;"
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Is the claimant someone other than the Veteran?
             
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            disabled=""
            id="different-claimant-option_false"
            name="different-claimant-option"
            type="radio"
            value="false"
          />
          <label
            class="disabled"
            for="different-claimant-option_false"
          >
            No
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_true"
            name="different-claimant-option"
            type="radio"
            value="true"
          />
          <label
            class=""
            for="different-claimant-option_true"
          >
            Yes
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SelectClaimant with formType not 'appeal' deceasedAppellants toggled ON renders correctly 1`] = `
<div>
  <div
    class="cf-different-claimant"
    style="margin-top: 18.95px;"
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Is the claimant someone other than the Veteran?
             
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            disabled=""
            id="different-claimant-option_false"
            name="different-claimant-option"
            type="radio"
            value="false"
          />
          <label
            class="disabled"
            for="different-claimant-option_false"
          >
            No
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="different-claimant-option_true"
            name="different-claimant-option"
            type="radio"
            value="true"
          />
          <label
            class=""
            for="different-claimant-option_true"
          >
            Yes
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
